# headroom-mcp

./: .gitignore  Cargo.toml  README.md  changelog.md  onpkg.json
docs/: architecture.md  codes.md  modification.md  usage.md
src/: analytics.rs  cache.rs  cli.rs  compression.rs  config.rs  main.rs  metrics.rs  server.rs
src/cache/: entry.rs  memory.rs  mod.rs  sqlite.rs
src/compression/: cmd_filters.rs  code.rs  csv.rs  detect.rs  diff.rs  errors.rs  helpers.rs  json.rs  logs.rs  mod.rs  syntax.rs
src/intelligence/: mod.rs  pricing.rs  scoring.rs  tokens.rs
src/tools/: cache_align.rs  exec.rs  mod.rs  schema.rs  web.rs
