[package]
name = "headroom-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
regex = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"